--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,10 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        " **/*.g.dart": true,
-        "**/*.freezed.dart": true
+        "**/*freezed.dart": false,
+        "**/*g.dart": false,
+        " **/*.g.dart": false,
+        "**/*.freezed.dart": false
     },
     "explorerExclude.backup": null
 }
